objects/DMAPP__DM_Plan_Question_Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG 

This object is responsible for the association of Plan Questions to Quicklinks and can be accessed from the Plan Questions page.</description>
    <fields>
        <fullName>DMAPP__AM_Question__c</fullName>
        <label>AM Question</label>
        <referenceTo>DMAPP__AM_Question__c</referenceTo>
        <relationshipLabel>AM Question Quicklinks</relationshipLabel>
        <relationshipName>AM_Question_Quicklinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>DMAPP__DM_Quicklink__c</referenceTo>
        <relationshipLabel>DM Plan Question Quicklinks</relationshipLabel>
        <relationshipName>DM_Plan_Question_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AM Question Quicklink</label>
    <nameField>
        <label>DM Plan Question Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Question Quicklinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>